--- a/Resources/Public/Css/styles.css
+++ b/Resources/Public/Css/styles.css
@@ -8,8 +8,8 @@
     cursor: pointer;
 }
 
-.social-gdpr-youtube-video img,
-.social-gdpr-vimeo-video img {
+.social-gdpr-youtube-video img.videostub,
+.social-gdpr-vimeo-video img.videostub {
     position: absolute;
     height: 100px;
     width: 100px;
@@ -22,7 +22,33 @@
 .social-gdpr-vimeo-iframe-notice {
     position: absolute;
     bottom: 0;
-    padding: 2.5% 5%;
+    padding: 2.5% 5% 3% 5%;
     background-color: rgba(0, 0, 0, 0.7);
     color: #FFFFFF;
+}
+
+.social-gdpr-youtube-iframe-notice p,
+.social-gdpr-vimeo-iframe-notice p {
+    font-size: inherit;
+}
+
+@media screen and (max-width: 520px) {
+    .social-gdpr-youtube-iframe-notice,
+    .social-gdpr-vimeo-iframe-notice {
+        font-size: 75%;
+    }
+
+    .social-gdpr-youtube-video img.videostub,
+    .social-gdpr-vimeo-video img.videostub {
+        height: auto;
+        width: 75px;
+        top: 30%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .social-gdpr-youtube-video img.videostub,
+    .social-gdpr-vimeo-video img.videostub {
+        width: 50px;
+    }
 }
