[TASK] Format CSS file

--- a/Resources/Public/Css/styles.css
+++ b/Resources/Public/Css/styles.css
@@ -24,7 +24,7 @@
     bottom: 0;
     padding: 2.5% 5% 3% 5%;
     background-color: rgba(0, 0, 0, 0.7);
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .social-gdpr-youtube-iframe-notice p,
