!!![BUGFIX] Handle iframe height and width correctly

--- a/Resources/Private/Templates/Vimeo.html
+++ b/Resources/Private/Templates/Vimeo.html
@@ -1,5 +1,5 @@
 <div class="social-gdpr-vimeo-iframe">
-    <div class="social-gdpr-vimeo-video" id="vm{data.uid}" style="{f:if(condition: data.preview, then: 'background-image: url(\'{data.preview}\'); ')}{f:if(condition: data.height, then: 'height: {data.height}px; ')}{f:if(condition: data.width, then: 'width: {data.width}px;')}">
+    <div class="social-gdpr-vimeo-video" id="vm{data.uid}" style="{f:if(condition: data.preview, then: 'background-image: url(\'{data.preview}\'); ')}{f:if(condition: data.height, then: 'height: {data.height}; ')}{f:if(condition: data.width, then: 'width: {data.width};')}">
         <div class="social-gdpr-vimeo-iframe-disarmed" data-iframe="{data.iframeHash}">
             <img src="{f:uri.image(src:'EXT:social_gdpr/Resources/Public/Images/play_button.svg')}" alt="" class="videostub" />
             <div class="social-gdpr-vimeo-iframe-notice">
