--- a/Resources/Public/Css/styles.css
+++ b/Resources/Public/Css/styles.css
@@ -7,7 +7,8 @@
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
-    cursor: pointer;
+    border: 0;
+    padding: 0;
 }
 
 .social-gdpr-google-maps,
