--- a/Resources/Private/Templates/GoogleMapsIframe.html
+++ b/Resources/Private/Templates/GoogleMapsIframe.html
@@ -1,6 +1,6 @@
 <div class="social-gdpr-google-maps-iframe">
-    <button
-        type="button"
+    <div
+        tabindex="0"
         aria-label="{f:translate(key: 'google-maps_aria-label', extensionName: 'social_gdpr')}"
         aria-describedby="gm-notice{data.uid}"
         class="social-gdpr-google-maps"
@@ -24,5 +24,5 @@
                 <p id="gm-notice{data.uid}">{f:translate(id: 'google_maps_notice', extensionName: 'social_gdpr', arguments: {0: '{f:translate(id: "privacy_policy", extensionName: "social_gdpr")->f:link.typolink(parameter: "{settings.privacyPid}")}'})->f:format.raw()}</p>
             </div>
         </div>
-    </button>
+    </div>
 </div>
