--- a/Resources/Public/Css/styles.css
+++ b/Resources/Public/Css/styles.css
@@ -5,11 +5,13 @@
     position: relative;
     min-width: 315px;
     min-height: 315px;
+    border: 0;
+    margin: 0;
+    padding: 0;
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
-    border: 0;
-    padding: 0;
+    cursor: pointer;
 }
 
 .social-gdpr-google-maps,
